// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Characters > with empty list > should match snapshot 1`] = `
<div
  data-testid="characters"
>
  <p
    data-testid="characters-title"
  >
    Characters
  </p>
  <p
    data-testid="characters-empty"
  >
    No 
    characters
     linked
  </p>
</div>
`;

exports[`Characters > with filled list > should match snapshot 1`] = `
<div
  data-testid="characters"
>
  <p
    data-testid="characters-title"
  >
    Characters
  </p>
  <ul>
    <li
      data-testid="characters-0"
    >
      VALUE_1
    </li>
    <li
      data-testid="characters-1"
    >
      VALUE_2
    </li>
  </ul>
</div>
`;
